--- a/d3d9/d3d9.vcxproj
+++ b/d3d9/d3d9.vcxproj
@@ -105,11 +105,7 @@
       <EnableUAC>false</EnableUAC>
       <ModuleDefinitionFile>deffile.def</ModuleDefinitionFile>
     </Link>
-    <PostBuildEvent>
-      <Command>IF DEFINED GW2_INSTALL_DIR (
-xcopy "$(TargetPath)" "$(GW2_INSTALL_DIR)\bin64\" /Y
-)</Command>
-    </PostBuildEvent>
+    <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -142,11 +138,7 @@ xcopy "$(TargetPath)" "$(GW2_INSTALL_DIR)\bin64\" /Y
       <EnableUAC>false</EnableUAC>
       <ModuleDefinitionFile>deffile.def</ModuleDefinitionFile>
     </Link>
-    <PostBuildEvent>
-      <Command>IF DEFINED GW2_INSTALL_DIR (
-xcopy "$(TargetPath)" "$(GW2_INSTALL_DIR)\bin64\" /Y
-)</Command>
-    </PostBuildEvent>
+    <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
